<resources>
    <string name="app_name">You-til</string>
    <string name="title_activity_quick_acess">QuickAcessActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_dice_roll6">DiceRollActivity6</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dice_roll8">DiceRollActivity8</string>
    <string name="title_activity_dice_roll10">DiceRollActivity10</string>
    <string name="title_activity_dice_roll12">DiceRollActivity12</string>
    <string name="selectDieTitle">Select Die To Roll</string>
    <string name="speed">Speed</string>
    <string name="select_unit_to_convert_from">Select Unit to Convert From</string>
    <string name="temperature">Temperature</string>
    <string name="length">Length</string>
    <string name="volume">Volume</string>
    <string name="your_number">Your Number</string>
    <string name="select_unit_to_convert_to">Select Unit to Convert To</string>
    <string name="converted_number">Converted Number</string>
    <string name="convert">Convert</string>
    <string name="six_sided">Six Sided</string>
    <string name="eight_sided">Eight Sided</string>
    <string name="four_sided">Four Sided</string>
    <string name="ten_sided">Ten Sided</string>
    <string name="twenty_sided">Twenty Sided</string>
    <string name="twelve_sided">Twelve Sided</string>

    <string-array name="TemeratureOptions">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="VolumeOptions">
        <item>Quarts</item>
        <item>Ounces</item>
        <item>Cups</item>
        <item>Gallons</item>
        <item>Liters</item>
        <item>Milliliters</item>
        <item>Tablespoon</item>
        <item>Teaspoon</item>
    </string-array>
    <string-array name="SpeedOptions">
        <item>Miles Per Hour</item>
        <item>Feet Per Second</item>
        <item>Kilometers Per Hour</item>
        <item>Meters Per Second</item>
    </string-array>

    <string-array name="DistanceOptions">
        <item>Kilometers</item>
        <item>Meters</item>
        <item>Miles</item>
        <item>Yards</item>
        <item>Feet</item>
        <item>Inches</item>
    </string-array>

</resources>
